# training_snowflake

./: pyproject.toml
dbtlearn/: crear_rol_streamlit.sql
dbtlearn/analyses/: full_moon_no_sleep.sql  price_distribution.sql
dbtlearn/models/: dashboards.yml  docs.md  overview.md  schema.yml  sources.yml
dbtlearn/models/dim/: dim_hosts_cleansed.sql  dim_listings_cleansed.sql  dim_listings_with_hosts.sql  schema.yml
dbtlearn/models/fct/: fct_reviews.sql
dbtlearn/models/src/: src_hosts.sql  src_listings.sql  src_reviews.sql
info/: snowflake
